# NBAPotentialWell

./: .gitignore  README.md  app.py  flask_app.py  make_duckdb_nba.py  make_duckdb_nba_basketball_ref_normalized.py  nba_panel_app.py  nbapotentialwell.py  pyproject.toml  requirements-test.txt  requirements-web.txt  requirements.txt  test_nba_scraper.py  test_single_month.py
db/: nba_db.py
dbnba/: nba_db.py
templates/: index.html
