[project]
name = "nbapotentialwell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.4.4",
    "flask>=3.1.2",
    "hvplot>=0.12.2",
    "matplotlib>=3.10.8",
    "nba-api>=1.11.3",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "panel>=1.8.7",
    "pbpstats>=1.3.11",
    "polars>=1.38.1",
    "pyqt5>=5.15.11",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "watchlist>=0.0.7",
]
